# gitprobe

./: .gitignore  DEVELOPMENT.md  LICENSE.md  README.md  gitprobe  pyproject.toml  requirements.txt
src/gitprobe/: __main__.py  cli.py
src/gitprobe/analysis/: analysis_service.py  call_graph_analyzer.py  cloning.py  repo_analyzer.py
src/gitprobe/analyzers/: c_cpp.py  go.py  javascript.py  python.py  rust.py
src/gitprobe/core/: analysis_limits.py
src/gitprobe/models/: analysis.py  core.py
src/gitprobe/utils/: logging_config.py  patterns.py
src/gitprobe/web/: server.py
tests/: README.md  __init__.py  test_integration.py
